# CUB

./: .flake8  .gitignore  LICENSE.md  README.md  annotate-sandbox.sh  annotations_to_training.py  baseline.py  combine.py  component_report.py  oscal.py  oscalize.py  parsers_i.py  pipeline.py  prep-sandbox.sh  pyproject.toml  requirements.in  requirements.txt  requirements.txt.orig  requirements_txt_checker.sh  requirements_txt_checker_ignoreupdates.txt  run-sandbox.sh  sample-pipeline.sh  sample.py  selector.py  similar.py  ssp.py  test_oscal.py  test_ssp.py  train-sandbox.sh  train.py
data/: README.md  ssp-components.json
data/selectors/: firewall.json  test-ac.json
data/ssps/: ssp1.jsonl  ssp2.jsonl
data/test_data/: test_combined_microsoft_active_directory.json  test_file1.csv  test_file1.txt  test_microsoft-active-directory-oscal.json
